Fixed text not to overlap on start

--- a/components/Banner.module.scss
+++ b/components/Banner.module.scss
@@ -39,6 +39,7 @@
 }
 
 .marqueeRight {
+  right: 100%;
   width: 100%;
   overflow: hidden;
   position: absolute;
